Fixing top-of-page spacing

--- a/css/content.css
+++ b/css/content.css
@@ -9,3 +9,6 @@
   max-width: 680px;
   width: 100%;
 }
+.site-main__content > [class^="heading--"]:first-child{
+  margin-top: 0;
+}
